    - lucky_numbers(n)                array ref of lucky numbers <= n
    - nth_lucky(n)                    the nth lucky number
    - is_lucky(n)                     predicate for lucky number sieve
    - sumliouville(n)                 L(n), sum of liouville(1..n)
    - prime_bigomega(n)               # of factors (with multiplicity)
    - prime_omega(n)                  # of factors (distinct)
    - powint(a, b)                    signed integer a^b
    - mulint(a, b)                    signed integer a*b
    - addint(a, b)                    signed integer a+b
    - subint(a, b)                    signed integer a-b
    - divint(a, b)                    signed integer a/b (floor)
    - modint(a, b)                    signed integer a%b (floor)
    - divrem(a, b)                    Euclidean quotient and remainder
    - fdivrem(a, b)                   Floored quotient and remainder
    - tdivrem(a, b)                   Truncated quotient and remainder
    - lshiftint(n, k)                 left shift n by k bits
    - rshiftint(n, k)                 right shift n by k bits (truncating)
    - rashiftint(n, k)                right shift n by k bits (flooring)
    - absint(n)                       integer absolute value
    - negint(n)                       integer negation
    - is_gaussian_prime(a,b)          is a+bi a Gaussian prime
    - random_safe_prime               for n-bit safe primes
    - is_smooth(n,k)                  is n a k-smooth number
    - is_rough(n,k)                   is n a k-rough number
    - is_practical(n)                 is n a practical number
    - is_delicate_prime(n)            is n a digitally delicate prime
    - is_almost_prime(k,n)            does n have exactly k prime factors
    - almost_prime_count(k,n)         count of integers with exactly k factors
    - almost_prime_count_approx(k,n)  fast approximate k-almost-prime count
    - almost_prime_count_lower(k,n)   fast k-almost-prime count lower bound