@@ -10,6 +10,7 @@ Revision history for Perl module Math::Prime::Util
     - sumliouville(n)                 L(n), sum of liouville(1..n)
     - prime_bigomega(n)               # of factors (with multiplicity)
     - prime_omega(n)                  # of factors (distinct)
+    - signint(a, b)                   integer sign (-1,0,1)
     - powint(a, b)                    signed integer a^b
     - mulint(a, b)                    signed integer a*b
     - addint(a, b)                    signed integer a+b
